--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
     <application
         android:name=".App"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/pikafish"
         android:label="@string/app_name"
         android:supportsRtl="false"
         android:theme="@style/AppTheme">
