--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
-include ':annotation'
-include ':api'
-include ':processor'
-include ':plugin'
+//include ':annotation'
+//include ':api'
+//include ':processor'
+//include ':plugin'
 include ':sample'
