--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: plugin.android
-apply plugin: plugin.andServer
+apply plugin: 'com.yanzhenjie.andserver'
+
 
 android {
     compileSdkVersion androidBuild.compileSdkVersion
@@ -19,7 +20,7 @@ android {
         minSdkVersion androidBuild.sampleMinSdkVersion
         targetSdkVersion androidBuild.sampleTargetSdkVersion
         versionCode 1
-        versionName POM_VERSION
+        versionName "1.0.0-beta"
         ndk {
             abiFilters 'arm64-v8a'
         }
@@ -38,23 +39,26 @@ android {
 
     buildTypes {
         release {
+            minifyEnabled true
             signingConfig signingConfigs.r1295
             ndk {
                 abiFilters 'arm64-v8a'
             }
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
             signingConfig signingConfigs.r1295
             ndk {
                 abiFilters 'arm64-v8a'
             }
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    implementation project(':api')
-    annotationProcessor project(':processor')
+    implementation 'com.yanzhenjie.andserver:api:2.1.12'
+    annotationProcessor 'com.yanzhenjie.andserver:processor:2.1.12'
 
     implementation deps.android.material
     implementation deps.android.compat
@@ -64,4 +68,5 @@ dependencies {
 
     implementation deps.loading
     implementation deps.json
+
 }
